# simplebed-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: parse_line.rs  skipindex.rs
src/: index.rs  lib.rs  record.rs  value.rs  writer.rs
tests/: compr.bed.gz.tbi  test.bed
