[package]
name = "simplebed"
version = "0.1.0"
edition = "2021"

[dependencies]
flate2 = "1.0.35"
noodles = {version = "0.90.0", features=["bgzf", "csi", "tabix"]}
noodles-bgzf = {version="0.35.0", features=["libdeflate"]}
noodles-csi = "0.43.0"
noodles-tabix = "0.49.0"
tempfile = "3.15.0"
thiserror = "2.0.11"
