[package]
name = "simplebed"
version = "0.1.0"
edition = "2021"

[dependencies]
flate2 = {version = "1.0.35", features=["cloudflare_zlib"]}
noodles = {git = "https://github.com/brentp/noodles.git", rev = "8eecb39c4", features=["bgzf", "csi", "tabix", "core"]}
noodles-bgzf = {version="0.35.0", features=["libdeflate"]}
noodles-csi = {git = "https://github.com/brentp/noodles.git", rev = "8eecb39c4"}
noodles-tabix = "0.49.0"
tempfile = "3.15.0"
thiserror = "2.0.11"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "skipindex"
harness = false
