[package]
name = "simplebed"
version = "0.1.0"
edition = "2021"

[dependencies]
fast-float = "0.2.0"
flate2 = {version = "1.0.35", features=["cloudflare_zlib"]}
#futures = "0.3.31"
noodles = {git = "https://github.com/brentp/noodles.git", rev = "8eecb39c4", features=["bgzf", "csi", "tabix", "core"]}
noodles-bgzf = {version="0.35.0", features=["libdeflate"]}
noodles-csi = {git = "https://github.com/brentp/noodles.git", rev = "8eecb39c4"}
noodles-tabix = "0.49.0"
thiserror = "^2"
#tokio = {version = "1.43.0", features=["io-util", "fs", "test-util", "macros"]}

[dev-dependencies]
criterion = "0.5.1"
tempfile = "3.16.0"

[[bench]]
name = "skipindex"
harness = false

[[bench]]
name = "parse_line"
harness = false
